--- a/mlkit_sample_face_detection_01/web/index.html
+++ b/mlkit_sample_face_detection_01/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mlkit_sample_01">
+  <meta name="apple-mobile-web-app-title" content="mlkit_sample_face_detection_01">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>mlkit_sample_01</title>
+  <title>mlkit_sample_face_detection_01</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
